--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </select>
 
       <label for="mensagen">Fale mais sobre voce:</label>
-      <textarea name="mensagem" id="mensagem" cols="50" rows="20"></textarea>
+      <textarea name="mensagem" id="mensagem" cols="" rows="18"></textarea>
 
       <div class="checkbox">
         <label for="termo">Todos os direitos reservados.</label>
