--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Formulário de Dados</h1>
+    <h1>DeadPool Form</h1>
+
+    <p>
+      <span>Quem é ele?</span><br><br>
+      Deadpool é um personagem fictício do universo Marvel, que atua geralmente como anti-herói e ocasionalmente como vilão.
+    </p>
+
+    <p>
+      Esse formulário é para você que ama o DeadPool. Coloque os seus dados abaixo.<br> 
+    </p>
 
     <form action="./" method="">
       <label for="nome">Nome</label>
@@ -60,28 +69,28 @@
         placeholder="maria@email.com"
       />
 
-      <label for="email">Saída Hotel</label>
+      <label for="email">Saída da última Comic-Con?</label>
       <input type="date" id="data" value="" name="data" required />
 
-      <p>Qual a sua faculdade?</p>
+      <p>O que mais você gosta no Deadpool?</p>
 
       <div class="escolha">
-          <label for="analise-dados">Análise de dados</label>
+          <label for="analise-dados">Comediante</label>
           <input type="radio" id="analise-dados" value="analise-dados" name="escolha">
         </div>
 
         <div class="escolha">
-          <label for="sistemas">Sistemas</label>
+          <label for="sistemas">Anti Heroí</label>
           <input type="radio" value="sistemas" id="sistemas" name="escolha">
        </div>
 
        <div class="escolha">
-        <label for="design">Design</label>
+        <label for="design">Seu modo de lular</label>
         <input type="radio" value="design" id="design" name="escolha"> 
       </div>
 
       <div class="escolha">
-        <label for="artes">Artes</label>
+        <label for="artes">Imortalidade</label>
         <input type="radio" value="talvez" id="artes" name="escolha">
       </div>  
 
@@ -90,7 +99,7 @@
         <input type="radio" value="quem_sabe" id="quem_sabe" name="escolha">
       </div>
 
-      <label for="parcelas">Local de Nascimento:</label>
+      <label for="parcelas">Local do seu Nascimento:</label>
       <select name="parcelas" id="parcelas">
         <option value="GV">GV</option>
         <option value="BH">BH</option>
@@ -99,7 +108,7 @@
         <option value="FORA"></option>
       </select>
 
-      <label for="mensagen">Fale mais sobre voce:</label>
+      <label for="mensagen">Fale mais sobre você:</label>
       <textarea name="mensagem" id="mensagem" cols="" rows="18"></textarea>
 
       <div class="checkbox">
