--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
         <option value="FORA"></option>
       </select>
 
+    <div class="mensagem
+    ">
       <label for="mensagen">Fale mais sobre você:</label>
       <textarea name="mensagem" id="mensagem" cols="" rows="18"></textarea>
+    </div>  
 
       <div class="checkbox">
         <label for="termo">Todos os direitos reservados.</label>
