--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <input type="radio" value="quem_sabe" id="quem_sabe" name="escolha">
       </div>
 
+    <div class="select-options">
       <label for="parcelas">Local do seu Nascimento:</label>
       <select name="parcelas" id="parcelas">
         <option value="GV">GV</option>
@@ -109,6 +110,7 @@
         <option value="RJ">RJ</option>
         <option value="FORA"></option>
       </select>
+    </div>
 
     <div class="mensagem
     ">
