--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       Esse formulário é para você que ama o DeadPool. Coloque os seus dados abaixo.<br> 
     </p>
 
+  <div class="dados">
     <form action="./" method="">
       <label for="nome">Nome</label>
       <input
@@ -70,9 +71,12 @@
         required
         placeholder="maria@email.com"
       />
+    </div>
 
+    <div class="date">
       <label for="email">Saída da última Comic-Con?</label>
       <input type="date" id="data" value="" name="data" required />
+    </div>
 
       <p class="questionamento-p">O que mais você gosta no Deadpool?</p>
 
