--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
   </head>
   <body>
   <div class="container">
-  <header class="header">
+  <header class="header" aria-label="cabeçalho">
     
-      <h1 class="titulo-principal">DeadPool Form</h1>
+      <h1 class="titulo-principal" aria-label="Titulo prinicipal">DeadPool Form</h1>
 
       
   </header>
   <main>
-    <p class="texto-principal">
+    <p class="texto-principal" aria-label="texto prinicipal">
       <span class="texto-principal-quem">Quem é o DeadPool?</span><br><br>
       Deadpool é um personagem fictício do universo Marvel, que atua geralmente como anti-herói e ocasionalmente como vilão.
     </p>
 
-    <p class="texto-principal">
+    <p class="texto-principal" aria-label="Texto segundario">
       Esse formulário é para você que ama o DeadPool. Coloque os seus dados abaixo.<br> 
     </p>
   </main>
 <section>
-  <div class="dados">
+  <div class="dados" aria-label="Dados">
     <form action="./" method="">
       <label for="nome">Nome</label>
       <input
@@ -83,7 +83,7 @@
 
     <div class="date">
       <label for="email">Saída da última Comic-Con?</label>
-      <input type="date" id="data" value="" name="data" required />
+      <input type="date" id="data" value="" name="data" required aria-label="data"/>
     </div>
 
       <p class="questionamento-p">O que mais você gosta no Deadpool?</p>
@@ -127,7 +127,7 @@
     <div class="mensagem
     ">
       <label for="mensagen">Fale mais sobre você:</label>
-      <textarea name="mensagem" id="mensagem" cols="" rows="18"></textarea>
+      <textarea name="mensagem" id="mensagem" cols="" rows="18" aria-label="Texto sobre voce"></textarea>
     </div>  
 
       <div class="checkbox">
