ajustes-footer-responsivo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
        </div>
 
        <div class="escolha">
-        <label for="design">Seu modo de lutar</label>
+        <label for="design">Lutador</label>
         <input type="radio" value="design" id="design" name="escolha"> 
       </div>
 
@@ -162,7 +162,8 @@
           <ul class="footer-contato">
             <li>maykon.farley@email.com</li>
             <li>+55 33 98451-0635</li>
-            <li><a href="https://www.instagram.com/maykon_silvva" target="_blank">@maykon_silvva</a></li>
+            <li><a class="links" href="https://www.instagram.com/maykon_silvva" target="_blank">@maykon_silvva</a></li>
+            <li><a class="links" href="https://www.linkedin.com/in/maykon-silva-35450722/" target="_blank">Linkedin</a></li></li>
           </ul>
         </div>
       </footer>
