--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Um formulário para quem AMA DeadPool.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style-old.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -23,7 +24,15 @@
   <main>
     <p class="texto-principal" aria-label="texto prinicipal">
       <span class="texto-principal-quem">Quem é o DeadPool?</span><br><br>
-      Deadpool é um personagem fictício do universo Marvel, que atua geralmente como anti-herói e ocasionalmente como vilão.
+      Deadpool (Wade Winston Wilson) é um personagem fictício do universo Marvel, que atua geralmente como anti-herói e ocasionalmente como vilão. Deadpool, cujo nome verdadeiro é Wade Winston Wilson, é um mercenário canadense marcado por ser falastrão, violento e principalmente por ser comediante e a partir ficou conhecido como o "mercenário tagarela". Tem também o fator de cura que o faz sobreviver aos piores ferimentos.<br><br>
+
+     Deadpool foi criado por Rob Liefeld e Fabian Nicieza e apareceu pela primeira vez em 1991, como um vilão em New Mutants #98 (história que no Brasil saiu dentro de Os Fabulosos X-Men #584 em 1994). Foi inspirado no vilão da DC Comics Exterminador (Deathstroke), inclusive com seu nome parodiando o alter ego deste, "Slade Wilson".<br><br>
+
+     A partir de um título próprio escrito por Joe Kelly e Ed McGuinness em 1998, ganhou estilo próprio, conhecido por sua capacidade de destruição, humor extremamente ácido, referências satíricas culturais e ocasionalmente a quebra da Quarta parede, se comunicando diretamente com o leitor. Assim como Wolverine, Deadpool é um produto do Projeto Arma X, do governo canadense, embora seu local de nascimento seja desconhecido, pois esconderam-no do mundo.<br><br>
+
+     Era originalmente um adversário dos Novos Mutantes e da X-Force, posteriormente desenvolvendo um romance com uma das participantes do grupo, Siryn, filha de Banshee da X-Force, e um título em que fazia missões junto com Cable. Foi interpretado por Ryan Reynolds em X-Men Origins: Wolverine (2009) e em seu próprio filme solo (2016), que ganhou sequência em 2018.<br><br>
+
+     referência: <a class="link-referencia" href="https://pt.wikipedia.org/wiki/Deadpool" target="_blank">https://pt.wikipedia.org/wiki/Deadpool</a>
     </p>
 
     <p class="texto-principal" aria-label="Texto segundario">
