--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
         <div class="footer-container">
           <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.</p>
           <ul class="footer-contato">
-            <li>maykon.farley@email.com</li>
-            <li>+55 33 98451-0635</li>
-            <li><a class="links" href="https://www.instagram.com/maykon_silvva" target="_blank">@maykon_silvva</a></li>
+            <li>Email: maykon.farley@gmail.com</li>
+            <li>Whatsapp: +55 33 98451-0635</li>
+            <li><a class="links" href="https://www.instagram.com/maykon_silvva" target="_blank">Instagram: @maykon_silvva</a></li>
             <li><a class="links" href="https://www.linkedin.com/in/maykon-silva-35450722/" target="_blank">Linkedin</a></li></li>
           </ul>
         </div>
