--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   
    <img class="img-background " src="../img/img-1.jpg" alt="Imagem do DeadPool" aria-label="Imagem do DeadPool" width="" height="">
-  <main class="main" id="#sobre" aria-label="Curiosidade sobre DeadPool">
+  <main class="main" id="sobre" aria-label="Curiosidade sobre DeadPool">
     <p class="texto-principal" aria-label="texto prinicipal">
       <span class="texto-principal-quem">Quem é o DeadPool?</span><br><br>
       Deadpool (Wade Winston Wilson) é um personagem fictício do universo Marvel, que atua geralmente como anti-herói e ocasionalmente como vilão. Deadpool, cujo nome verdadeiro é Wade Winston Wilson, é um mercenário canadense marcado por ser falastrão, violento e principalmente por ser comediante e a partir ficou conhecido como o "mercenário tagarela". Tem também o fator de cura que o faz sobreviver aos piores ferimentos.<br><br>
@@ -48,7 +48,7 @@
       Esse formulário é para você que ama o DeadPool. Coloque os seus dados abaixo.<br> 
     </p>
   </main>
-<section class="sectiion-dados" id="#dados">
+<section class="sectiion-dados" id="dados">
   <div class="dados" aria-label="Dados">
     <form action="./" method="">
       <label for="nome">Nome</label>
