--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     <title>DeadPool Form</title>
   </head>
   <body>
-  <div class="container">
-  <header class="header" aria-label="cabeçalho">
+    <header class="header" aria-label="cabeçalho">
     <div class="header-div">
       <nav>
         <ul class="header-menu" aria-label="Navegador">
@@ -49,7 +47,7 @@
       Esse formulário é para você que ama o DeadPool. Coloque os seus dados abaixo.<br> 
     </p>
   </main>
-<section class="sectiion-dados" id="dados">
+<section class="section-dados" id="dados">
   <div class="dados" aria-label="Dados">
     <form action="./" method="">
       <label for="nome">Nome</label>
@@ -99,8 +97,8 @@
       />
     </div>
   </section>
-  <section>
 
+  <section>
     <div class="date">
       <label for="email">Saída da última Comic-Con?</label>
       <input type="date" id="data" value="" name="data" required aria-label="data"/>
@@ -181,6 +179,5 @@
           </ul>
         </div>
       </footer>       
-   </div>
-  </body>
+     </body>
 </html>
